user auth added
