# api/swagger.yaml
@@ -13,7 +13,7 @@ definitions:
     type: object
   models.LoginResponse:
     properties:
-      crt:
+      cert:
         type: string
       token:
         type: string
@@ -37,16 +37,12 @@ definitions:
       userId:
         type: integer
     type: object
-  models.User:
+  models.UserRequest:
     properties:
-      created_at:
-        type: string
       login:
         type: string
       password:
         type: string
-      user_id:
-        type: integer
     type: object
 info:
   contact: {}
@@ -149,7 +145,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.UserRequest'
       produces:
       - application/json
       responses:
