# internal/app/server/http/models/user.go
@@ -1,10 +1,6 @@
 package models
 
-import "time"
-
-type User struct {
-	UserID    int       `json:"user_id"`
-	Login     string    `json:"login"`
-	Password  string    `json:"password"`
-	CreatedAt time.Time `json:"created_at,omitempty"`
+type UserRequest struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
 }
